--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,20 +20,39 @@
   <body>
     <div class="container">
       <div class="my-4">
-        <h4>Create New Contacts</h4>
-        <form action="/contacts" class="form-inline" method="post">
+        <h4>Create New Contact</h4>
+        <form action="/contacts" class="form-inline" method="post" id="my-form">
           <div class="form-group mr-3">
-            <input type="text" name="name" placeholder="Name" class="form-control" />
+            <input
+              type="text"
+              name="name"
+              placeholder="Name"
+              class="form-control <%= error.name? 'is-invalid': '' %>"
+            />
+            <div class="invalid-feedback"><%= error.name %></div>
           </div>
           <div class="form-group mr-3">
-            <input type="text" name="phone" placeholder="Phone" class="form-control" />
+            <input
+              type="text"
+              name="phone"
+              placeholder="Phone"
+              class="form-control <%= error.phone? 'is-invalid': '' %>"
+            />
+            <div class="invalid-feedback"><%= error.phone %></div>
           </div>
           <div class="form-group mr-3">
-            <input type="email" name="email" placeholder="Email" class="form-control" />
+            <input
+              type="email"
+              name="email"
+              placeholder="Email"
+              class="form-control <%= error.email? 'is-invalid': '' %>"
+            />
+            <div class="invalid-feedback"><%= error.email %></div>
           </div>
           <div class="form-group mr-3">
             <input type="hidden" name="id" placeholder="Name" class="form-control" />
           </div>
+          <input type="submit" value="Submit" class="btn btn-primary" />
         </form>
       </div>
       <div class="">
@@ -53,9 +72,21 @@
               <td><%= contact.name %></td>
               <td><%= contact.phone %></td>
               <td><%= contact.email %></td>
-              <td>
-                <button class="btn btn-warning btn-sm">Edit</button>
-                <a href="/contact/delelte/<% contact._id %> " class="btn btn-danger btn-sm">Delete</a>
+              <td class="btn-group">
+                <button
+                  class="btn btn-warning btn-sm edit-btn"
+                  data-name="<%= contact.name  %>"
+                  data-phone="<%= contact.phone  %>"
+                  data-email="<%= contact.email  %>"
+                  data-id="<%= contact.id  %>"
+                >
+                  Edit
+                </button>
+                <a
+                  href="/contacts/delete/<%= contact._id %> "
+                  class="btn btn-danger btn-sm"
+                  >Delete</a
+                >
               </td>
             </tr>
             <% } %>
@@ -81,5 +112,23 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
+
+    <script>
+      window.onload = function () {
+        let editBtns = document.getElementsByClassName('edit-btn');
+        let form = document.getElementById('my-form');
+
+        [...editBtns].forEach((btn) => {
+          btn.addEventListener('click', (e) => {
+            let { name, phone, email, id } = e.target.dataset;
+            form[0].value = name;
+            form[1].value = phone;
+            form[2].value = email;
+            form[3].value = id;
+            form[4].value = 'Update';
+          });
+        });
+      };
+    </script>
   </body>
 </html>
